fix index bug in datalogger and use wandb logger

--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -1,13 +1,14 @@
 #experiment name
 exp:
   root: /home/bharathsk/projects/nerf/exps/
-  name: drop_1
+  name: drop_2_nerf_fixed
+  offline_logging: False
 
 #hyperparameters
 hyperparams:
-  lr: 0.01
-  num_rays: 32000
-  test_num_rays: 32000
+  lr: 0.0005
+  num_rays: 9000
+  test_num_rays: 9000
   num_samples_coarse: 64
   num_samples_fine: 128
   iterations: 10000000
