--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -1,7 +1,7 @@
 #experiment name
 exp:
   root: /home/bharathsk/projects/nerf/exps/
-  name: drop_2_nerf_fixed
+  name: drop_2_bb_relaxed
   offline_logging: False
 
 #hyperparameters
@@ -12,7 +12,7 @@ hyperparams:
   num_samples_coarse: 64
   num_samples_fine: 128
   iterations: 10000000
-  epochs: 1
+  epochs: 100
   num_workers: 16
 
 #dataset
